<resources>
    <string name="app_name">MaRéu</string>
    <string name="item_meeting_infos">%1$s - %2$s - %3$s</string>
    <string name="start_meeting_time">dd/MM à hh:mm</string>
    <string name="filter_title">Filtrer les réunions</string>
    <string name="filter_by_date">Par date :</string>
    <string name="filter_by_room">Par salle :</string>
    <string name="new_meeting_button">New meeting Button</string>
    <string name="create_meeting_title">Nouvelle réunion</string>
    <string name="create_meeting_default_text_for_blank">Saisir ici...</string>
    <string name="create_meeting_subject">Sujet:</string>
    <string name="create_meeting_room_select">Salle:</string>
    <string name="create_meeting_start_date_select">Date :</string>
    <string name="create_meeting_start_time_select">Début :</string>
    <string name="create_meeting_end_time_select">Fin :</string>
    <string name="create_meeting_participants_select">Participants:</string>
    <string name="create_meeting_add_participant_button"> + </string>
    <string name="create_meeting_participant_added_name">%1$s</string>
    <string name="cancel_button">Annuler</string>
    <string name="validate_button">Valider</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="round_colored_avatar">round colored avatar</string>
    <string name="trash_icon">trash icon</string>
    <string name="user_avatar">user avatar</string>
</resources>