<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/item_participant_added_avatar"
        android:contentDescription="@string/user_avatar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="5sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_person_24" />

    <TextView
        android:id="@+id/item_participant_added_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:text="@string/create_meeting_participant_added_name"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/item_participant_added_avatar"
        app:layout_constraintStart_toEndOf="@+id/item_participant_added_avatar"
        app:layout_constraintTop_toTopOf="@+id/item_participant_added_avatar" />

    <ImageButton
        android:id="@+id/item_participant_added_delete_button"
        android:contentDescription="@string/trash_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10sp"
        android:background="@null"
        android:tint="#3f445e"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_delete_black_20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>