<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:layout_gravity="center"
    android:orientation="vertical"  >


    <TextView
        android:id="@+id/filter_dialog_title"
        android:text="@string/filter_title"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/filter_by_room_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/by_meeting_room"
            android:text="@string/filter_by_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Spinner
        android:id="@+id/filter_meeting_room_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:imeOptions="actionDone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/filter_by_date_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/by_meeting_date"
            android:text="@string/filter_by_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <DatePicker
        android:id="@+id/filter_date_datepicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"
        android:layout_gravity="center_horizontal"
        android:datePickerMode="spinner"/>

    <Button
        android:id="@+id/validate_filter_button"
        android:text="@string/validate_filter"
        android:padding="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>